<resources>
    <string name="app_name">Memoria</string>
    <string name="title_activity_main">Memoria</string>
    <!-- Strings used for fragments for navigation -->
    <string name="auth_fragment_label">Log In</string>
    <string name="feed_fragment_label">Memory Feed</string>
    <string name="form_fragment_label">New Post</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="memoria">Memoria</string>
    <string name="log_in_prompt">Please Log In to Continue</string>
    <string name="log_out">Log Out</string>
    <string name="log_in">Login</string>
    <string name="feed">Welcome to Memoria! Start by making your first post!</string>
    <string name="new_post_button">New Post</string>
    <string name="change_time_button">Edit Notifs</string>
    <string name="back">Back</string>
    <string name="form_title">New Post</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_hint">abcd1234</string>
    <string name="password_hint">********</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="register_label">Continue</string>
    <string name="email">Email</string>
    <string name="email_hint">hello@memoria.com</string>
    <string name="register_prompt">Register for an account</string>
    <string name="registration_disclaimer">By continuing, you agree to the Platform Terms and Conditions and Privacy Policy</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="password_min">Min. 8 characters with special character</string>

    <string name="demo_title">Welcome To Memoria!</string>
    <string name="demo_description">My first Memoria post! Nice sunset :)</string>
    <string name="demo_tags">Tags: sunset, first</string>

    <string name="search_hint">Search for titles, content, or tags...</string>

</resources>