<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/AuthFragment">

    <fragment
        android:id="@+id/AuthFragment"
        android:name="com.example.memoria.AuthFragment"
        android:label="@string/auth_fragment_label"
        tools:layout="@layout/fragment_auth">

        <action
            android:id="@+id/action_AuthFragment_to_FeedFragment"
            app:destination="@id/FeedFragment" />
    </fragment>
    <fragment
        android:id="@+id/FeedFragment"
        android:name="com.example.memoria.FeedFragment"
        android:label="@string/feed_fragment_label"
        tools:layout="@layout/fragment_feed">

        <action
            android:id="@+id/action_FeedFragment_to_AuthFragment"
            app:destination="@id/AuthFragment" />
        <action
            android:id="@+id/action_FeedFragment_to_FormFragment"
            app:destination="@id/FormFragment" />
    </fragment>
    <fragment
        android:id="@+id/FormFragment"
        android:name="com.example.memoria.FormFragment"
        android:label="@string/form_fragment_label"
        tools:layout="@layout/fragment_form">

        <action
            android:id="@+id/action_FormFragment_to_FeedFragment"
            app:destination="@id/FeedFragment" />
    </fragment>
</navigation>